working on the last part

--- a/project1/Ex1_firstName_lastName_000.ipynb
+++ b/project1/Ex1_firstName_lastName_000.ipynb
@@ -773,7 +773,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "your answer"
+    "##### Answer:\n",
+    "<i><b>How do the nullclines change with respect to a?</b></i> The w-nullcline is a straight line with a slope tuned by the parameter a (if a=0, then the w-nullcline is horizontal).\n",
+    "\n",
+    "<i><b>How do the nullclines change if a constant current I(t) = c is applied?</b></i> Upon current injection, the u-nullcline is shifted vertically by an amount proportional to the magnitude of the current.\n",
+    "\n",
+    "<i><b>What is the interpretation of parameter b?</b></i> Each time the voltage reaches the reset threshold, it is reinitialized at the reset value u_reset, while the adaptation variable is shifted upwards by an amount b, compared with the value w just before the reset. Namely, b is the jump of the spike-triggered current.\n",
+    "\n",
+    "<i><b>How do flow arrows change as tau_w gets bigger?</b></i> Tau_w is the decaying time scale of the spike-triggered current. If it is small, then the decay is fast. If it gets bigger, the spike-triggered current decays on a long time scale and it can accumulate over several spikes and therefore decrease the net driving current I-w, which would lead to an adapting pattern of the membrane potential."
    ]
   },
   {
