--- a/project3/Ex3_firstName_lastName_0000.ipynb
+++ b/project3/Ex3_firstName_lastName_0000.ipynb
@@ -289,7 +289,7 @@
     "\n",
     "*   Without running the simulation again, but by using the same `results` [dictionary](https://docs.python.org/3/tutorial/datastructures.html?highlight=dictionary#dictionaries), plot the 4 population rates on the same graph using 5 different values of `avg_window_width`. \n",
     "*   Interpret the effect of a very short and a very long averaging window.\n",
-    "*   Find a value `avg_window_width` for which the population activity plot the population activity plot gives meaningful rates.\n",
+    "*   Find a value `avg_window_width` for which the population activity plot gives meaningful rates.\n",
     "\n",
     "Remark: you should use the function [`PopulationRateMonitor.smooth_rate()`](https://brian2.readthedocs.io/en/2.0.1/user/recording.html#recording-population-rates). \n",
     "\n",
@@ -719,21 +719,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
